.config/eww/scss/bar.scss
.bar {
  border-radius: 9px;
  background-color: #1e1e2e;
  padding: 2.5px 6px;
  border: $primary_color solid 2.25px;
}

.bar .clock {
  font-size: 20px;
  font-weight: 900;
  background-color: #313244;
  min-width: 85px;
  margin: 5px 4px;;
  border-radius: 4px;
  color: $primary_color;
}

.bar .clock .clock-logo {
  color: $primary_color;
  font-size: 18px;
}



.bar .music {
  background-color: #313244 ;
  color : $primary_color;
  border-radius: 4px;
  min-width: 260px;
  padding: 0px 8px;
  margin: 5px 4px;
  border-radius: 4px;
}

.bar .music-cover {
  background-position: center center;
  background-repeat: no-repeat; 
  background-size: cover;
  min-width: 31px;
  border-radius: 2px;
  margin: 3px 0px;
}

.bar .default-music-cover {
  font-size:22px;
}

.bar .default-music-label {
  font-size:22px;
  font-size: 900;
}

.bar .music-label {
  margin-top : 2px;
}

.bar .music-label .music-title {
  font-weight: 900;
  font-size: 13px;
}

.bar .music-label .music-artist {
  font-weight: 300;
  font-size: 11px;
}

.bar .music .controller button {
  font-size: 18px;
  min-width: 1px;
  color: $primary_color;
  transition-property: color; 
  transition-duration: 0.2s; 
  transition-timing-function: ease-out; 
}

.bar .music .controller button:hover {
  color: $primary_color_light;
}
.bar .music .controller button:active {
  color: $primary_color_dark;
}


.bar .music-eventbox:hover .music {
  background-color: $primary_color ;
  color : #313244;
}

.bar .music-eventbox:active .music {
  background-color: $primary_color_dark ;
  color : #313244;
}

.bar .music-eventbox:hover .controller button {
  color : #313244;
}


.bar .workspaces {
  border-radius: 10px;
  padding: 7px 9px;
  margin: 7px 0px ;
  background-color: #313244;
}

.bar .workspace-button {
  background-color: #6c7086;
  min-width: 17px;
  border-radius: 100px;
  min-height: 0.01rem;

  transition-property: min-width, background-color; 
  transition-duration: 0.25s; 
  transition-timing-function: ease-out; 
}

.bar .workspace-button-active {
  background-color: $primary_color_dark;
}
.bar .workspace-button-focused {
  min-width: 45px;
  background-color: $primary_color;
}
.bar .workspace-button-eventbox:hover .workspace-button {
  background-color: $primary_color;
}

.bar .workspace-button-eventbox:active .workspace-button {
  background-color: $primary_color_dark;

}

.rightside {
  padding-right: 4px;
}

.bar .banner {
  border: 2px solid #949cbb;
  min-width: 135px;
  margin : 5px 0px;
  border-radius: 4px;
  background-color: #89b4fa;
}

.bar .notification button {
  margin: 5px 0px;
  border-radius: 6px; 
  padding: 0px 8px;
  background-color: #313244;  
  font-size: 16px;
  color : $primary_color;
}

.bar .system-info {
  color : $primary_color;
  font-weight: 600;
}

.bar .system-info .device {
  margin: 5px 0px;
  border-radius: 6px; 
  padding: 0px 4px;
  background-color: #313244;
}

.bar .system-info .device-event-box:hover .device,
.bar .notification button:hover  {
  background-color: $primary_color;
  color : #1e1e2e;
}

.bar .system-info .device-event-box:active .device,
.bar .notification button:active {
  background-color: $primary_color_dark;
  color : #1e1e2e;
}

.bar .system-info .wifi {
  padding: 0px 7px;
  font-size: 16px;
}
.bar .system-info .brightness {  
  padding: 0px 6px;
  font-size: 15px;
}
.bar .system-info .volume {  
  padding: 0px 8px;
  font-size: 20px;
  margin-left: 4px;
}
.bar .system-info .bluetooth {  
  padding: 0px 5px;
  font-size: 18px;
  margin-left: 5px;
}



.bar .battery {  
  color: $primary_color;
  background-color: #313244;
  font-weight: 300;
  margin: 5px 0px;
  border-radius: 5px; 
  padding: 0px 12px;
}

.bar .battery .icons {
  font-size: 20px;
}

.bar .battery .charging-icons {
  font-size: 15px;
}

.bar .battery .capacity {
  font-size: 16px;
}



@keyframes rainbow {
  0% {
    border-color: $primary_color;
  }
  
  57% {
    border-color: $primary_color;
  }
  100% {
    border-color: $primary_color;
  }
}

